<resources>
    <string name="app_name">Android Course Calculator</string>
    <string name="default_text_view_string">0</string>
    <string name="button_text_1">1</string>
    <string name="button_text_2">2</string>
    <string name="button_text_3">3</string>
    <string name="button_text_plus">+</string>
    <string name="button_text_4">4</string>
    <string name="button_text_5">5</string>
    <string name="button_text_6">6</string>
    <string name="button_text_minus">-</string>
    <string name="button_text_7">7</string>
    <string name="button_text_8">8</string>
    <string name="button_text_9">9</string>
    <string name="button_text_multiplication">*</string>
    <string name="button_text_equal">=</string>
    <string name="button_text_0">0</string>
    <string name="button_text_comma">,</string>
    <string name="button_text_division">/</string>
    <string name="text_button_c">C</string>
    <string name="button_text_del">Del</string>
    <string name="button_string_bt">BT</string>
    <string name="button_text_t">T</string>

    <string name="zero_char">0</string>
    <string name="one_char">1</string>
    <string name="two_char">2</string>
    <string name="three_char">3</string>
    <string name="four_char">4</string>
    <string name="five_char">5</string>
    <string name="six_char">6</string>
    <string name="seven_char">7</string>
    <string name="eight_char">8</string>
    <string name="nine_char">9</string>
    <string name="ten_char">0</string>

    <string name="minus_char">-</string>
    <string name="plus_char">+</string>
    <string name="division_char">/</string>
    <string name="multiplication_char">*</string>
    <string name="dot_char">,</string>
    <string name="default_char">#</string>
</resources>