<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pavement"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin_top"
        android:gravity="right"
        android:text="@string/default_text_view_string"
        android:textColor="@color/default_text_view_color"
        android:textSize="@dimen/default_text_view_text_size" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/row_margin_top">

        <Button
            android:id="@+id/button_1"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_1"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_2"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_3"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:text="@string/button_text_plus"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/button_4"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_4"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_5"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_6"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="minusButtonOnClick"
            android:text="@string/button_text_minus"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/button_7"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_7"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_8"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_9"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:text="@string/button_text_multiplication"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:text="@string/button_text_equal"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="numberButtonOnClick"
            android:text="@string/button_text_0"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="commaButtonOnClick"
            android:text="@string/button_text_comma"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:text="@string/button_text_division"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/button_C"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="CButtonOnClick"
            android:text="@string/text_button_c"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/button_del"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="DelButtonOnClick"
            android:text="@string/button_text_del"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/button_big_text"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_button_horizontal_marge"
            android:layout_weight="1"
            android:backgroundTint="@color/default_button_background_tint"
            android:onClick="openBigTextScreen"
            android:text="@string/button_string_bt"
            android:textColor="@color/default_button_text_color"
            android:textSize="@dimen/default_button_text_size" />
    </TableRow>
</TableLayout>